--- a/dashboard.html
+++ b/dashboard.html
@@ -243,7 +243,9 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        
+        <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
