--- a/dashboard.html
+++ b/dashboard.html
@@ -244,7 +244,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="dashboard.html">Dashboard</a>
+  <a href="Dashboard">Dashboard</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
